--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,8 @@
 numpy==1.17.4
 pythonRLSA==1.0.0
 opencv-python==4.5.1.48
+torch==1.8.1
+torchsummary==1.5.1
+torchvision==0.9.1
+matplotlib==3.1.2
+scipy==1.6.3
