--- a/.gitignore
+++ b/.gitignore
@@ -11,5 +11,5 @@ ocr/ocr_input.png
 ocr/small_classifier/train_data/
 ocr/small_classifier/val_data/
 ocr/tessconfig
-ocr/annotated_crops/
-!ocr/annotated_crop/extract_character_images.py
+ocr/classifier/annotated_crops/
+!ocr/classifier/annotated_crops/extract_character_images.py
